--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "cookinstock",
   "version": "1.0.0",
   "description": "",
+  "homepage": "https://frameur.github.io/cookinstock",
   "main": "app.js",
   "scripts": {
+    "deploy": "npm run build&&-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "françois",
@@ -12,6 +14,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
     "express": "^4.17.1",
+    "gh-pages": "^3.1.0",
     "mongoose": "^5.9.9",
     "multer": "^1.4.2",
     "nunjucks": "^3.2.1",
